# ComplianceCrew

./: .gitignore  Complice_Crew_Key.pem  Dummy_Money_Laundering_Dataset.csv  README.md  pyproject.toml  pyproject.toml.back  pyvenv.cfg
src/fraud_detector/: crew.py  main.py  streamlit_app.py
src/fraud_detector/.streamlit/: secrets.toml
